semantic searching and AI chat